# evoli

./: .drone.yml  .gitattributes  .gitignore  CHANGELOG  Cargo.toml  Jenkinsfile  LICENSE.md  README.md
resources/: display_config.ron  input.ron  wind.ron
resources/assets/: bush.glb  carcass.glb  carnivore.gltf  devil_slime.glb  ground.glb  ground2.glb  herbivore.gltf  ixie.glb  ixie.gltf  nushi.gltf  slime.glb  sphere.gltf  topplegrass.gltf  tree.glb
resources/blender_scenes/: bush.blend  ground.blend  ground.blend1  ground2.blend
resources/prefabs/: bee.ron  carnivore.ron  carnivorous.ron  factions.ron  herbivore.ron  plant.ron
resources/prefabs/creatures/: carnivore.ron  cube.ron  ground.ron  herbivore.ron  herbivore_carcass.ron  ixie.ron  nushi.ron  plant.ron  topplegrass.ron  world.ron
resources/prefabs/temp/: carnivore.ron  cube.ron  herbivore.ron  plant.ron  world.ron
resources/prefabs/ui/: controls.ron  controls_row.ron  main_game.ron  menu.ron  pause_menu.ron
src/: main.rs  render_graph.rs
src/components/: collider.rs  combat.rs  creatures.rs  digestion.rs  global_transform.rs  globe_position.rs  health.rs  mod.rs  perception.rs  swarm.rs
src/components/experimental/: boids.rs  perception.rs
src/events/: day_night_cycle.rs  mod.rs
src/resources/: audio.rs  debug.rs  mod.rs  prefabs.rs  simulation.rs  spatial_grid.rs  world_bounds.rs
src/states/: controls.rs  loading.rs  main_game.rs  menu.rs  mod.rs  pause_menu.rs  paused.rs
src/systems/: ;  bee_behavior.rs  camera_movement.rs  collision.rs  combat.rs  day_night_cycle.rs  death.rs  debug.rs  decision.rs  digestion.rs  global_transform.rs  health.rs  main_game_ui.rs  mod.rs  movement.rs  music.rs  perception.rs  spawner.rs  swarm_behavior.rs  time_control.rs  wander.rs
src/utils/: hierarchy_util.rs  mod.rs  spatial_hash.rs
(+17 files in other folders)
